--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,5 +22,7 @@ jobs:
         working-directory: ClientApp/
       - name: Build
         run: dotnet build --no-restore
+        working-directory: ClientApp/
       - name: Test
         run: dotnet test --no-build --verbosity normal
+        working-directory: ClientApp/
