--- a/.github/workflows/ServerBuildAndTest.yml
+++ b/.github/workflows/ServerBuildAndTest.yml
@@ -16,13 +16,10 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.x
-      - name: Restore dependencies
-        run: dotnet restore
-        working-directory: ClientApp/ClientApp/
-      - name: Build
-        run: dotnet build --no-restore
-        working-directory: ClientApp/ClientApp/
+          dotnet-version: 5.0.x
+      - name: Build and run Server
+        run: dotnet run
+        working-directory: /src/WebUI/
       - name: Test
         run: dotnet test --no-build --verbosity normal
-        working-directory: ClientApp/ClientApp/
+        working-directory: tests/Application.UnitTests/
