--- a/.github/workflows/ServerBuildAndTest.yml
+++ b/.github/workflows/ServerBuildAndTest.yml
@@ -19,7 +19,7 @@ jobs:
           dotnet-version: 5.0.x
       - name: Build and run Server
         run: dotnet run
-        working-directory: /src/WebUI/
+        working-directory: src/WebUI/
       - name: Test
         run: dotnet test --no-build --verbosity normal
         working-directory: tests/Application.UnitTests/
