--- a/.github/workflows/ClientAppBuildAndTest.yml
+++ b/.github/workflows/ClientAppBuildAndTest.yml
@@ -16,9 +16,6 @@ jobs:
       - uses: actions/setup-node@v1 #this will install Node and npm on Ubuntu
         with:
           node-version: "12.x"
-      - name: Install dependencies
-        run: npm install
-        working-directory: src/WebUI/ClientApp/
-      - name: Run app
-        run: npm start
+      - name: Install dependencies start hosting and kill it
+        run: npm install --save-dev start-server-and-test
         working-directory: src/WebUI/ClientApp/
