--- a/.github/workflows/HotelAppBuildAndTest.yml
+++ b/.github/workflows/HotelAppBuildAndTest.yml
@@ -15,10 +15,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1 #this will install Node and npm on Ubuntu
         with:
-           node-version: '12.x'
-      - name: Install dependencies
+          node-version: "12.x"
+      - name: Install dependencies start hosting and kill it
         run: npm install --save-dev start-server-and-test
         working-directory: src/WebUI/HotelApp/
-
-
-    
