--- a/.github/workflows/HotelAppBuildAndTest.yml
+++ b/.github/workflows/HotelAppBuildAndTest.yml
@@ -16,6 +16,9 @@ jobs:
       - uses: actions/setup-node@v1 #this will install Node and npm on Ubuntu
         with:
           node-version: "12.x"
-      - name: Install dependencies start hosting and kill it
-        run: npm install --save-dev start-server-and-test
-        working-directory: src/WebUI/HotelApp/
+      - name: Install dependencies
+        run: npm install
+        working-directory: src/WebUI/ClientApp/
+      - name: Run Tests
+        run: npm test
+        working-directory: src/WebUI/ClientApp/
