--- a/.github/workflows/ClientAppBuildAndTest.yml
+++ b/.github/workflows/ClientAppBuildAndTest.yml
@@ -20,5 +20,5 @@ jobs:
         run: npm install
         working-directory: src/WebUI/ClientApp/
       - name: Run Tests
-        run: npm test
+        run: npm test --forceExit
         working-directory: src/WebUI/ClientApp/
