--- a/.github/workflows/HotelAppBuildAndTest.yml
+++ b/.github/workflows/HotelAppBuildAndTest.yml
@@ -20,5 +20,5 @@ jobs:
         run: npm install
         working-directory: src/WebUI/ClientApp/
       - name: Run Tests
-        run: CI=true npm test
+        run: npm run test:ci
         working-directory: src/WebUI/ClientApp/
