new test Ci test

--- a/.github/workflows/ClientAppBuildAndTest.yml
+++ b/.github/workflows/ClientAppBuildAndTest.yml
@@ -1,11 +1,6 @@
 name: BuildTestClientApp
 
-on:
-  push:
-    branches: [develop]
-  pull_request:
-    branches: [develop]
-  workflow_dispatch:
+on: workflow_dispatch
 
 jobs:
   build:
