--- a/.github/workflows/ServerBuildAndTest.yml
+++ b/.github/workflows/ServerBuildAndTest.yml
@@ -2,15 +2,24 @@ name: BuildTestServer
 
 on:
   push:
-    branches: [develop]
-  pull_request:
-    branches: [develop]
-  workflow_dispatch:
+    branches: [Deleting-offer-]
 
 jobs:
-  build:
+  test:
+    name: Test
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:12
+        env:
+          POSTGRES_USER: test_user
+          POSTGRES_PASSWORD: test
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - uses: actions/checkout@v2
       - name: Setup .NET
@@ -25,5 +34,4 @@ jobs:
         working-directory: tests/Application.UnitTests/
       - name: IntegrationTests
         run: dotnet test --no-build --verbosity normal
-        working-directory: tests/Application.IntegrationTests/ 
-    
+        working-directory: tests/Application.IntegrationTests/
