--- a/.github/workflows/ServerBuildAndTest.yml
+++ b/.github/workflows/ServerBuildAndTest.yml
@@ -39,8 +39,5 @@ jobs:
         run: dotnet build
         working-directory: src/WebUI/
       - name: UnitTests
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet test
         working-directory: tests/Application.UnitTests/
-      - name: IntegrationTests
-        run: dotnet test --no-build --verbosity normal
-        working-directory: tests/Application.IntegrationTests/
