--- a/src/WebUI/HotelApp/package.json
+++ b/src/WebUI/HotelApp/package.json
@@ -20,20 +20,22 @@
     "generate": "ng generate"
   },
   "dependencies": {
-    "@angular/animations": "^11.0.8",
+    "@angular/animations": "^11.2.7",
+    "@angular/cdk": "^11.2.6",
     "@angular/common": "^11.0.8",
     "@angular/compiler": "^11.0.8",
     "@angular/core": "^11.0.8",
     "@angular/forms": "^11.0.8",
     "@angular/localize": "^11.0.8",
+    "@angular/material": "^11.2.6",
     "@angular/platform-browser": "^11.0.8",
     "@angular/platform-browser-dynamic": "^11.0.8",
     "@angular/router": "^11.0.8",
-    "@ngx-translate/core": "^13.0.0",
     "@angular/service-worker": "^11.0.8",
-    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
-    "bootstrap": "^4.5.3",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+    "@ngx-translate/core": "^13.0.0",
+    "bootstrap": "^4.5.3",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.1",
     "zone.js": "~0.10.3"
