--- a/.github/workflows/ClientAppBuildAndTest.yml
+++ b/.github/workflows/ClientAppBuildAndTest.yml
@@ -23,5 +23,5 @@ jobs:
         run: npm install
         working-directory: src/WebUI/ClientApp/
       - name: Run Tests
-        run: npm run test:ci
+        run: CI=true npm test
         working-directory: src/WebUI/ClientApp/
