new test action for client app

--- a/.github/workflows/ClientAppBuildAndTest.yml
+++ b/.github/workflows/ClientAppBuildAndTest.yml
@@ -23,5 +23,7 @@ jobs:
         run: npm install
         working-directory: src/WebUI/ClientApp/
       - name: Run Tests
-        run: CI=true npm test
+        run: npm test
+        env:
+            CI: true
         working-directory: src/WebUI/ClientApp/
