--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,27 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": ".NET Core Launch (web)",
+      "type": "coreclr",
+      "request": "launch",
+      "preLaunchTask": "",
+      "program": "${workspaceFolder}/src/WebUI/bin/Debug/net5.0/HotelReservationSystem.WebUI.dll",
+      "args": [],
+      "cwd": "${workspaceFolder}/src/WebUI/bin/Debug/net5.0/",
+      "stopAtEntry": false,
+      "requireExactSource": false,
+      "serverReadyAction": {
+        "action": "openExternally",
+        "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+      },
+      "env": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "sourceFileMap": {
+        "/Views": "${workspaceFolder}/Views"
+      }
+    },
+    {
       "type": "pwa-chrome",
       "request": "launch",
       "name": "Launch Chrome against localhost",
