--- a/src/WebUI/appsettings.Development.json
+++ b/src/WebUI/appsettings.Development.json
@@ -10,5 +10,10 @@
     "Key": {
       "Type": "Development"
     }
-  }
+  },
+  "UseInMemoryDatabase": false,
+  "ConnectionStrings": {
+    "DefaultConnection": "host=localhost;Database=HotelReservationSystemDb;Username=test_user;Password=test"
+  },
+  "AllowedHosts": "*"
 }
