--- a/.github/workflows/ClientAppBuildAndTest.yml
+++ b/.github/workflows/ClientAppBuildAndTest.yml
@@ -14,16 +14,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1 #this will install Node and npm on Ubuntu
         with:
           node-version: "12.x"
+      - uses: nanasess/setup-chromedriver@master
+        with:
+          # Optional: do not specify to match Chrome's version
+          chromedriver-version: '88.0.4324.96'
       - name: Install dependencies
         run: npm install
         working-directory: src/WebUI/ClientApp/
       - name: Run Tests
-        run: npm test
-        env:
-            CI: true
+        run: npm run test -- --no-watch --no-progress
         working-directory: src/WebUI/ClientApp/
