--- a/.github/workflows/HotelAppBuildAndTest.yml
+++ b/.github/workflows/HotelAppBuildAndTest.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Install dependencies
         run: npm install
         working-directory: src/WebUI/ClientApp/
+      - run: sudo apt-get install xvfb
       - name: Run Tests
-        run: CI=true npm test
+        run: xvfb-run --auto-servernum npm run test -- --no-watch --no-progress
         working-directory: src/WebUI/ClientApp/
