added form styling

--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "host=localhost;Database=HotelReservationSystemDb;Username=test_user;Password=test"
+    "DefaultConnection": "host=localhost;Database=HotelReservationSystemDb;Port=5433;Username=test_user;Password=test"
   },
   "Logging": {
     "LogLevel": {
