--- a/src/WebUI/Properties/launchSettings.json
+++ b/src/WebUI/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:61846",
-      "sslPort": 44312
+      "applicationUrl": "http://localhost:61845",
+      "sslPort": 44333
     }
   },
   "profiles": {
@@ -18,10 +18,10 @@
     "HotelReservationSystem.WebUI": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5101;http://localhost:5100"
     }
   }
 }
