added endpoint for getting rooms associated with offer, added button "show rooms" in offer's list

--- a/src/WebUI/WebUI.csproj
+++ b/src/WebUI/WebUI.csproj
@@ -46,9 +46,7 @@
   <Target Name="NSwag" AfterTargets="Build" Condition="'$(Configuration)' == 'Debug'">
     <Copy SourceFiles="@(Reference)" DestinationFolder="$(OutDir)References" />
     <Exec Command="$(NSwagExe_Net50) run /variables:Configuration=$(Configuration)" />
-    <Copy SourceFiles="ClientApp/src/app/web-api-client.ts"
-     DestinationFiles="HotelApp/src/app/web-api-client.ts" 
-     OverwriteReadOnlyFiles="true"/>
+    <Copy SourceFiles="ClientApp/src/app/web-api-client.ts" DestinationFiles="HotelApp/src/app/web-api-client.ts" OverwriteReadOnlyFiles="true" />
     <RemoveDir Directories="$(OutDir)References" />
   </Target>
 
