--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,11 @@ services:
 
   postgresserver:
      image: postgres:latest
+     expose: 
+      - 5433
      ports:
-       - 5432:5432
+       - 5433:5433
+     command: -p 5433
      environment:
          POSTGRES_USER: test_user
          POSTGRES_PASSWORD: test
