--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "host=postgresserver;Database=HotelReservationSystemDb;Username=test_user;Password=test"
+    "DefaultConnection": "host=localhost;Port=5433;Database=HotelReservationSystemDb;Username=test_user;Password=test"
   },
   "Logging": {
     "LogLevel": {
@@ -14,9 +14,9 @@
         "Profile": "IdentityServerSPA"
       }
     }
-  //  "Key": {
- //     "Type": "Development"
-  //  }
+    //  "Key": {
+    //     "Type": "Development"
+    //  }
   },
   "AllowedHosts": "*"
 }
