--- a/src/WebUI/Dockerfile
+++ b/src/WebUI/Dockerfile
@@ -1,5 +1,6 @@
 FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 ENV ASPNETCORE_URLS=https://+:5001;http://+:5000
+ENV ASPNETCORE_ENVIRONMENT=Production
 WORKDIR /app
 EXPOSE 5000
 EXPOSE 5001
