--- a/src/WebUI/appsettings.Production.json
+++ b/src/WebUI/appsettings.Production.json
@@ -7,6 +7,9 @@
       "Microsoft": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "host=postgresserver;Port=5433; Database=HotelReservationSystemDb;Username=test_user;Password=test"
+  },
   "IdentityServer": {
     "Key": {
       "Type": "Store",
