--- a/src/WebUI/appsettings.Production.json
+++ b/src/WebUI/appsettings.Production.json
@@ -10,12 +10,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "host=postgresserver;Port=5433; Database=HotelReservationSystemDb;Username=test_user;Password=test"
   },
-  "IdentityServer": {
-    "Key": {
-      "Type": "Store",
-      "StoreName": "My",
-      "StoreLocation": "CurrentUser",
-      "Name": "CN=MyApplication"
-    }
-  }
+  "AllowedHosts": "*"
 }
