--- a/.github/workflows/ServerBuildAndTest.yml
+++ b/.github/workflows/ServerBuildAndTest.yml
@@ -55,7 +55,7 @@ jobs:
         run: dotnet build --no-restore
         working-directory: tests/Application.IntegrationTests/
       - name: IntegrationTests
-        run: dotnet test --verbosity Normal --no-build /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+        run: dotnet test --verbosity Normal --no-build /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=lcov
         working-directory: tests/Application.IntegrationTests/
       - name: Publish coverage report to coveralls.io
         uses: coverallsapp/github-action@master
