--- a/src/WebUI/ClientApp/package.json
+++ b/src/WebUI/ClientApp/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
