--- a/src/WebUI/appsettings.Development.json
+++ b/src/WebUI/appsettings.Development.json
@@ -11,7 +11,7 @@
       "Type": "Development"
     }
   },
-  "UseInMemoryDatabase": false,
+  "UseInMemoryDatabase": true,
   "ConnectionStrings": {
     "DefaultConnection": "host=localhost;Database=HotelReservationSystemDb;Username=test_user;Password=test"
   },
