--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "UseInMemoryDatabase": false,
+  "UseInMemoryDatabase": true,
   "ConnectionStrings": {
     "DefaultConnection": "host=localhost;Database=HotelReservationSystemDb;Username=test_user;Password=test"
   },
