--- a/src/WebUI/appsettings.Production.json
+++ b/src/WebUI/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
-  "UseInMemoryDatabase": false,
+  "UseInMemoryDatabase": true,
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
@@ -9,10 +9,7 @@
   },
   "IdentityServer": {
     "Key": {
-      "Type": "Store",
-      "StoreName": "My",
-      "StoreLocation": "CurrentUser",
-      "Name": "CN=MyApplication"
+      "Type": "Development"
     }
   }
 }
