--- a/src/WebUI/appsettings.Development.json
+++ b/src/WebUI/appsettings.Development.json
@@ -6,14 +6,14 @@
       "Microsoft": "Information"
     }
   },
-  "IdentityServer": {
-    "Key": {
-      "Type": "Development"
-    }
-  },
   "UseInMemoryDatabase": true,
   "ConnectionStrings": {
     "DefaultConnection": "host=localhost;Database=HotelReservationSystemDb;Username=test_user;Password=test"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IdentityServer": {
+    "Key": {
+      "Type": "Development"
+    }
+  }
 }
