hotel deploy fix

--- a/src/WebUI/HotelApp/Dockerfile
+++ b/src/WebUI/HotelApp/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:12.2.0
 
 
-EXPOSE 4200
+EXPOSE 80
 # set working directory
 WORKDIR /HotelApp
 
@@ -18,4 +18,4 @@ COPY . /HotelApp
 
 
 # start app
-CMD ["ng","serve","--host", "0.0.0.0","--port","4200","--disableHostCheck"]
+CMD ["ng","serve","--configuration", "production","--host", "0.0.0.0","--port","80","--disableHostCheck"]
