--- a/src/WebUI/HotelApp/nginx.conf
+++ b/src/WebUI/HotelApp/nginx.conf
@@ -2,6 +2,6 @@ server {
   listen 80;
   location /hotel {
       alias /usr/share/nginx/html;
-      try_files $uri $uri/ /example/index.html;
+      try_files $uri $uri/ /hotel/index.html;
      }
 }
