--- a/src/WebUI/appsettings.Development.json
+++ b/src/WebUI/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft": "Information"
     }
   },
-  "UseInMemoryDatabase": true,
+  "UseInMemoryDatabase": false,
   "ConnectionStrings": {
     "DefaultConnection": "host=localhost;Database=HotelReservationSystemDb;Username=test_user;Password=test"
   },
