--- a/src/WebUI/appsettings.json
+++ b/src/WebUI/appsettings.json
@@ -1,18 +1,21 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "host=localhost;Database=HotelReservationSystemDb;Username=test_user;Password=test"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "IdentityServer": {
-    "Clients": {
-      "HotelReservationSystem.WebUI": {
-        "Profile": "IdentityServerSPA"
-      }
-    }
-  },
-  "AllowedHosts": "*"
+    "UsedInMemoryDatabase":  true,
+    "ConnectionStrings": {
+        "DefaultConnection": "host=localhost;Database=HotelReservationSystemDb;Username=test_user;Password=test"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Debug",
+            "System": "Information",
+            "Microsoft":  "Information"
+        }
+    },
+    //"IdentityServer": {
+    //    "Clients": {
+    //        "HotelReservationSystem.WebUI": {
+    //            "Profile": "IdentityServerSPA"
+    //        }
+    //    }
+    //},
+    "AllowedHosts": "*"
 }
